--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,7 @@
     <title>Contact-Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="shortcut icon" href="./assets/favicon.io" type="image/x-icon">
 </head>
 <body>
 <header>
@@ -17,31 +18,30 @@
           </figure></a>
       <a href="./index.html"><button class="btn btn-outline-success me-2" type="button" href="./index.html">Home</button></a>
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Future Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Past Events</button></a>
+      <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
       <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
       <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
     </form>
    </nav>
  </div>
-  <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <h1> Upcoming Events </h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Upcoming Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Future Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Past Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Contact</h1>
-      </div>
+ <div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h1> Contact </h1>
     </div>
+    <div class="carousel-item">
+      <h1> Upcoming Events</h1>
+    </div>
+    <div class="carousel-item">
+      <h1> Past Events</h1>
+    </div>
+    <div class="carousel-item">
+      <h1> Status </h1>
+    </div>
+    <div class="carousel-item">
+      <h1> Home </h1>
+    </div>
+  </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
