--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,7 @@
     <title>Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="shortcut icon" href="./assets/favicon.io" type="image/x-icon">
 </head>
 <body>
 <header>
@@ -17,11 +18,9 @@
           </figure></a>
       <a href="./index.html"><button class="btn btn-outline-success me-2" type="button" href="./index.html">Home</button></a>
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Future Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Past Events</button></a>
-      <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button" href="./contact-us.html">Contact</button></a>
+      <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
+      <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
       <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
-    
     </form>
    </nav>
  </div>
