--- a/post-events.html
+++ b/post-events.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Past Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="shortcut icon" href="./assets/favicon.io" type="image/x-icon">
 </head>
 <body>
 <header>
@@ -17,28 +18,28 @@
           </figure></a>
       <a href="./index.html"><button class="btn btn-outline-success me-2" type="button" href="./index.html">Home</button></a>
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Future Events</button></a>
-      <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Past Events</button></a>
-      <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button" href="./contact-us.html">Contact</button></a>
+      <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
+      <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
+      <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
     </form>
    </nav>
  </div>
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <h1> Upcoming Events </h1>
+        <h1> Past Events </h1>
+      </div>
+      <div class="carousel-item">
+        <h1> Contact </h1>
+      </div>
+      <div class="carousel-item">
+        <h1> Status </h1>
+      </div>
+      <div class="carousel-item">
+        <h1> Home </h1>
       </div>
       <div class="carousel-item">
         <h1> Upcoming Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Future Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Past Events</h1>
-      </div>
-      <div class="carousel-item">
-        <h1> Contact</h1>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -51,7 +52,7 @@
     </button>
 </nav>
 </header>
-<main>  
+<section>  
   <div class="d-flex p-3"><div class="form-check form-check-inline">
     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
     <label class="form-check-label" for="inlineCheckbox1">Category</label>
@@ -59,7 +60,8 @@
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
     <label class="form-check-label" for="inlineCheckbox2">Category</label>
-  </div><div class="form-check form-check-inline">
+  </div>
+    <div class="form-check form-check-inline">
     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
     <label class="form-check-label" for="inlineCheckbox3">Category</label>
   </div>
@@ -71,93 +73,90 @@
   <form class="d-flex"  role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
-</div>
-</div>
-</main>
-    <div class="d-flex justify-content-center flex-wrap text-center">
-        <div class="card m-2 shadow" style="width: 18rem">
-          <img src="./assets/Cinema.jpg" class="card-img-top" alt="..." height="150">
-          <div class="card-body">
-            <h5 class="card-title">Cinema</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
-            </p>
-          </div>
-          <div class="card-footer border-0">
-            <div class="d-flex justify-content-between">
-              <p>Price: $12000</p>
-              <a href="./templates/detail.html" class="btn amazeButton">See more...</a>
-            </div>
-          </div>
-        </div>
-        <div class="card m-2 shadow" style="width: 18rem">
-          <img src="./assets/Costume_Party.jpg" class="card-img-top" alt="..." height="150">
-          <div class="card-body">
-            <h5 class="card-title">Costume Party</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
-            </p>
-          </div>
-          <div class="card-footer border-0">
-            <div class="d-flex justify-content-between">
-              <p>Price: $0000</p>
-              <a href="./templates/detail.html" class="btn amazeButton">See more...</a>
-            </div>
-          </div>
-        </div>
-        <div class="card m-2 shadow" style="width: 18rem">
-          <img src="./assets/Food_Fair.jpg" class="card-img-top" alt="..." height="150">
-          <div class="card-body">
-            <h5 class="card-title">Food Fair</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
-            </p>
-          </div>
-          <div class="card-footer border-0">
-            <div class="d-flex justify-content-between">
-              <p>Price: $0000</p>
-              <a href="./templates/detail.html" class="btn amazeButton">See more...</a>
-            </div>
-          </div>
-        </div>
-        <div class="card m-2 shadow" style="width: 18rem">
-          <img src="./assets/Marathon.jpg" class="card-img-top" alt="..." height="150">
-          <div class="card-body">
-            <h5 class="card-title">Marathon</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
-            </p>
-          </div>
-          <div class="card-footer border-0">
-            <div class="d-flex justify-content-between">
-              <p>Price: $0000</p>
-              <a href="./templates/detail.html" class="btn amazeButton">See more...</a>
-            </div>
-          </div>
-        </div>
-        <div class="card m-2 shadow" style="width: 18rem">
-            <img src="./assets/Music_Concert.jpg" class="card-img-top" alt="..." height="150">
-            <div class="card-body">
-              <h5 class="card-title">Music Concert</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            <div class="card-footer border-0">
-              <div class="d-flex justify-content-between">
-                <p>Price: $0000</p>
-                <a href="./templates/detail.html" class="btn amazeButton">See more...</a>
-              </div>
-            </div>
-          </div>
+    </div>
+  </section>
+<div class="d-flex justify-content-center flex-wrap text-center">
+    <div class="card m-2 shadow" style="width: 18rem">
+      <img src="./assets/Cinema.jpg" class="card-img-top" alt="..." height="150">
+      <div class="card-body">
+        <h5 class="card-title">Cinema</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
       </div>
-</main>
+      <div class="card-footer border-0">
+        <div class="d-flex justify-content-between">
+          <p>Price: $0000</p>
+          <a href="./detail.html" class="btn">See more...</a>
+        </div>
+      </div>
+    </div>
+    <div class="card m-2 shadow" style="width: 18rem">
+      <img src="./assets/Costume_Party.jpg" class="card-img-top" alt="..." height="150">
+      <div class="card-body">
+        <h5 class="card-title">Costume Party</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-footer border-0">
+        <div class="d-flex justify-content-between">
+          <p>Price: $0000</p>
+          <a href="./detail.html" class="btn">See more...</a>
+        </div>
+      </div>
+    </div>
+    <div class="card m-2 shadow" style="width: 18rem">
+      <img src="./assets/Food_Fair.jpg" class="card-img-top" alt="..." height="150">
+      <div class="card-body">
+        <h5 class="card-title">Food Fair</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-footer border-0">
+        <div class="d-flex justify-content-between">
+          <p>Price: $0000</p>
+          <a href="./detail.html" class="btn">See more...</a>
+        </div>
+      </div>
+    </div>
+    <div class="card m-2 shadow" style="width: 18rem">
+      <img src="./assets/Marathon.jpg" class="card-img-top" alt="..." height="150">
+      <div class="card-body">
+        <h5 class="card-title">Marathon</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-footer border-0">
+        <div class="d-flex justify-content-between">
+          <p>Price: $0000</p>
+          <a href="./detail.html" class="btn">See more...</a>
+        </div>
+      </div>
+    </div>
+    <div class="card m-2 shadow" style="width: 18rem">
+        <img src="./assets/Music_Concert.jpg" class="card-img-top" alt="..." height="150">
+        <div class="card-body">
+          <h5 class="card-title">Music Concert</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up
+            the bulk of the card's content.
+          </p>
+        </div>
+        <div class="card-footer border-0">
+          <div class="d-flex justify-content-between">
+            <p>Price: $0000</p>
+            <a href="./detail.html" class="btn">See more...</a>
+          </div>
+        </div>
+      </div>
+  </div>
 </div>
 <body>
   <footer>
