--- a/status.html
+++ b/status.html
@@ -18,7 +18,7 @@
               </figure></a>
           <a href="./index.html"><button class="btn btn-outline-success me-2" type="button" href="./index.html">Home</button></a>
           <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
-          <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
+          <a href="./past-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
           <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
           <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
         </form>
