--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </figure></a>
       <a href="./index.html"><button class="btn btn-outline-success me-2" type="button" href="./index.html">Home</button></a>
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
-      <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
+      <a href="./past-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
       <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
       <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
     </form>
@@ -76,88 +76,7 @@
 </div>
 </div>
 <main>
-  <div class="d-flex justify-content-center flex-wrap text-center">
-      <div class="card m-2 shadow" style="width: 18rem">
-        <img src="./assets/Cinema.jpg" class="card-img-top" alt="..." height="150">
-        <div class="card-body">
-          <h5 class="card-title">Cinema</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
-          </p>
-        </div>
-        <div class="card-footer border-0">
-          <div class="d-flex justify-content-between">
-            <p>Price: $0000</p>
-            <a href="./detail.html" class="btn">See more...</a>
-          </div>
-        </div>
-      </div>
-      <div class="card m-2 shadow" style="width: 18rem">
-        <img src="./assets/Costume_Party.jpg" class="card-img-top" alt="..." height="150">
-        <div class="card-body">
-          <h5 class="card-title">Costume Party</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
-          </p>
-        </div>
-        <div class="card-footer border-0">
-          <div class="d-flex justify-content-between">
-            <p>Price: $0000</p>
-            <a href="./detail.html" class="btn">See more...</a>
-          </div>
-        </div>
-      </div>
-      <div class="card m-2 shadow" style="width: 18rem">
-        <img src="./assets/Food_Fair.jpg" class="card-img-top" alt="..." height="150">
-        <div class="card-body">
-          <h5 class="card-title">Food Fair</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
-          </p>
-        </div>
-        <div class="card-footer border-0">
-          <div class="d-flex justify-content-between">
-            <p>Price: $0000</p>
-            <a href="./detail.html" class="btn">See more...</a>
-          </div>
-        </div>
-      </div>
-      <div class="card m-2 shadow" style="width: 18rem">
-        <img src="./assets/Marathon.jpg" class="card-img-top" alt="..." height="150">
-        <div class="card-body">
-          <h5 class="card-title">Marathon</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up
-            the bulk of the card's content.
-          </p>
-        </div>
-        <div class="card-footer border-0">
-          <div class="d-flex justify-content-between">
-            <p>Price: $0000</p>
-            <a href="./detail.html" class="btn">See more...</a>
-          </div>
-        </div>
-      </div>
-      <div class="card m-2 shadow" style="width: 18rem">
-          <img src="./assets/Music_Concert.jpg" class="card-img-top" alt="..." height="150">
-          <div class="card-body">
-            <h5 class="card-title">Music Concert</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
-            </p>
-          </div>
-          <div class="card-footer border-0">
-            <div class="d-flex justify-content-between">
-              <p>Price: $0000</p>
-              <a href="./detail.html" class="btn">See more...</a>
-            </div>
-          </div>
-        </div>
-    </div>
+    <div id="div-cards" class="d-flex justify-content-center flex-wrap text-center"></div>
 </main>
 <body>
   <footer>
@@ -169,4 +88,5 @@
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
+<script src="./js/data.js"></script>  
 </html>
