--- a/index.html
+++ b/index.html
@@ -52,30 +52,8 @@
     </button>
 </nav>
 </header>
-<section>  
-  <div class="d-flex p-3"><div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-    <label class="form-check-label" for="inlineCheckbox1">Category</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-    <label class="form-check-label" for="inlineCheckbox2">Category</label>
-  </div><div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-    <label class="form-check-label" for="inlineCheckbox3">Category</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-    <label class="form-check-label" for="inlineCheckbox4"> Category</label>
-  </div>
-  <div class="container-fluid justify-content-end">
-  <form class="d-flex"  role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
-</div>
-</div>
 <main>
+     <div class="d-flex p-3" id="table_checks"></div>
     <div id="div-cards" class="d-flex justify-content-center flex-wrap text-center"></div>
 </main>
 <body>
