--- a/detail.html
+++ b/detail.html
@@ -25,22 +25,14 @@
    </nav>
  </div>
 </header>
-<div class="detail">
-        <div class="card m-2 shadow" style="width: 50rem">
-            <img src="" class="card-img-top" alt="..." height="150">
-            <div class="card-body">
-              <h5 class="card-title">Titulo</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            </div>
-          </div>
+<main>
+  <div class="container text-center mt-5 border p-5" id="container-detail">
 </main>
 </div>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="./js/data.js"></script>
+<script src="./js/detail.js"></script>
 </body>
 <footer>
   <div class="d-grid gap-2 d-md-block">
