--- a/past-events.html
+++ b/past-events.html
@@ -52,31 +52,8 @@
     </button>
 </nav>
 </header>
-<section>  
-  <div class="d-flex p-3"><div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-    <label class="form-check-label" for="inlineCheckbox1">Category</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-    <label class="form-check-label" for="inlineCheckbox2">Category</label>
-  </div><div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-    <label class="form-check-label" for="inlineCheckbox3">Category</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-    <label class="form-check-label" for="inlineCheckbox4"> Category</label>
-  </div>
-  <div class="container-fluid justify-content-end">
-  <form class="d-flex"  role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
-</div>
-</div>
-</section>
 <main> 
+  <div class="d-flex p-3" id="table_checks"></div>
   <div id="div-cardspast" class="d-flex justify-content-center flex-wrap text-center"></div>
 </main>
 <body>
@@ -90,4 +67,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 <script src="./js/datapast-event.js"></script>
+<script src="./js/data.js"></script>  
+
 </html>
