--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
       <a href="./post-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
       <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
-      <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
+      <a href="./stats.html"><button class="btn btn-outline-success me-2" type="button">Stats</button></a>
     </form>
    </nav>
  </div>
@@ -31,7 +31,6 @@
 </div>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="./js/data.js"></script>
 <script src="./js/detail.js"></script>
 </body>
 <footer>
