--- a/past-events.html
+++ b/past-events.html
@@ -20,7 +20,7 @@
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
       <a href="./past-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
       <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
-      <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
+      <a href="./stats.html"><button class="btn btn-outline-success me-2" type="button">Stats</button></a>
     </form>
    </nav>
  </div>
@@ -39,7 +39,7 @@
       <h1> Contact</h1>
     </div>
     <div class="carousel-item">
-      <h1> Status</h1>
+      <h1> Stats</h1>
     </div>
   </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -67,6 +67,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 <script src="./js/datapast-event.js"></script>
-<script src="./js/data.js"></script>  
-
 </html>
