--- a/stats.html
+++ b/stats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Status</title>
+    <title>Stats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="shortcut icon" href="./assets/favicon.io" type="image/x-icon">
@@ -20,14 +20,14 @@
           <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
           <a href="./past-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
           <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
-          <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
+          <a href="./stats.html"><button class="btn btn-outline-success me-2" type="button">Stats</button></a>
         </form>
        </nav>
  </div>
  <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <h1> Status </h1>
+        <h1> Stats </h1>
       </div>
       <div class="carousel-item">
         <h1> Home </h1>
@@ -53,84 +53,48 @@
 </nav>
 </header>
 <body>
-    <main class="d-flex flex-column shadow">
-        <table class="">
+    <main class="d-flex flex-column shadow">    
+      <div class="table-responsive m-5">
+        <table class="table tabla1">
           <thead>
             <tr>
-              <th colspan="3">Events Statistics</th>
+              <th colspan="4">Events statistics</th>
             </tr>
           </thead>
-          <tbody>
+          
             <tr>
               <td>Events with the highest percentage of attendance</td>
               <td>Events with the lowest percentage of attendance</td>
               <td>Event with larger capacity</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-          </tbody>
+            </tr>   
+            <tbody id="eventStatics">
+            </tbody>
+
+        <table class="table tabla1">
+        <thead>
+            <th colspan="4">Upcoming events statistics by category</th>
+        </thead>
+          <tr>
+            <td>Categories</td>
+            <td>Revenues</td>
+            <td>Percentage of attendance</td>
+          </tr>
+          <tbody id="upcomingStatistics">            
         </table>
-        <table class="">
+      
+        <table class="table tabla1">
           <thead>
-            <tr>
-              <th colspan="3">Upcoming events Statistics by category</th>
-            </tr>
+            <th colspan="4">Past Events statistic by category</th>
           </thead>
-          <tbody>
-            <tr>
-              <td>Categories</td>
-              <td>Revenues</td>
-              <td>Percentage of attendance</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td></td>
-              <td>...</td>
-            </tr>
+          <tr>
+            <td>Categories</td>
+            <td>Revenues</td>
+            <td>Percentage of attendance</td>
+          </tr>
+          <tbody id="pastStatistics">    
           </tbody>
-        </table>
-        <table class="">
-          <thead>
-            <tr>
-              <th colspan="3">Past events Statistic by category</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Categories</td>
-              <td>Revenues</td>
-              <td>Percentage of attendance</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-          </tbody>
-        </table>
+        </table>    
+      </div>    
       </main>
       <footer>
         <div class="d-grid gap-2 d-md-block">
@@ -140,5 +104,6 @@
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    </body>
+      <script src="./js/stats.js"></script>
+  </body>
 </html>
