--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -20,7 +20,7 @@
       <a href="./upcoming-events.html"><button class="btn btn-outline-success me-2" type="button">Upcoming Events</button></a>
       <a href="./past-events.html" class="btn btn-outline-success me-2" type="button">Past Events</button></a>
       <a href="./contact-us.html"><button class="btn btn-outline-success me-2" type="button">Contact</button></a>
-      <a href="./status.html"><button class="btn btn-outline-success me-2" type="button">Status</button></a>
+      <a href="./stats.html"><button class="btn btn-outline-success me-2" type="button">Stats</button></a>
     </form>
    </nav>
  </div>
@@ -39,7 +39,7 @@
       <h1> Contact</h1>
     </div>
     <div class="carousel-item">
-      <h1> Status</h1>
+      <h1> Stats</h1>
     </div>
   </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
